--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>Portafolio</title>
   </head>
   <body>
-    <h1>Hola Mundo</h1>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">Alejandro E. Rendon</a></li>
+          <li><a href="#">Bio</a></li>
+          <li><a href="#">Portafolio</a></li>
+          <li><a href="#">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
   </body>
 </html>
