--- a/index.html
+++ b/index.html
@@ -7,17 +7,36 @@
   </head>
   <body>
     <header>
-      <nav>
+      <!-- <nav>
         <ul>
           <li><a href="#">Alejandro E. Rendon</a></li>
           <li><a href="#">Bio</a></li>
           <li><a href="#">Portafolio</a></li>
           <li><a href="#">Contacto</a></li>
         </ul>
-      </nav>
+      </nav> -->
     </header>
     <main>
-
+      <div class="content">
+        <div class="center">
+          <h1>Alejandro E. Rendon</h1>
+        </div>
+      </div>
+      <div class="content" style="background: red">
+        <div class="center">
+          <h1>Bio</h1>
+        </div>
+      </div>
+      <div class="content">
+        <div class="center">
+          <h1>Portafolio</h1>
+        </div>
+      </div>
+      <div class="content">
+        <div class="center">
+          <h1>Contacto</h1>
+        </div>
+      </div>
     </main>
     <footer>
 
