Distribución del contenido

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
     <title>Portafolio</title>
   </head>
   <body>
@@ -17,25 +18,17 @@
       </nav> -->
     </header>
     <main>
-      <div class="content">
-        <div class="center">
-          <h1>Alejandro E. Rendon</h1>
-        </div>
+      <div class="content" id="intro">
+        <h1>Alejandro E. Rendon</h1>
       </div>
-      <div class="content" style="background: red">
-        <div class="center">
-          <h1>Bio</h1>
-        </div>
+      <div class="content" id="bio">
+        <h1>Bio</h1>
       </div>
-      <div class="content">
-        <div class="center">
-          <h1>Portafolio</h1>
-        </div>
+      <div class="content" id="portafolio">
+        <h1>Portafolio</h1>
       </div>
-      <div class="content">
-        <div class="center">
-          <h1>Contacto</h1>
-        </div>
+      <div class="content" id="contacto">
+        <h1>Contacto</h1>
       </div>
     </main>
     <footer>
