--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
     </header>
     <main>
       <div class="content" id="intro">
+        <img src="img/foto.png" alt="Foto de perfil" />
         <h1>Alejandro E. Rendon</h1>
+        <h3>
+          Director de Infraestructura HPC/TI <br>
+          Grupo de Investigación Sirius <br>
+        </h3>
       </div>
       <div class="content" id="bio">
         <h1>Bio</h1>
