--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
     <title>Portafolio</title>
   </head>
   <body>
@@ -25,6 +25,15 @@
           Director de Infraestructura HPC/TI <br>
           Grupo de Investigación Sirius <br>
         </h3>
+        <div id="informacion">
+          <a href="http://www.facebook.com/alejoerendon" target="_blank"><img src="img/icons/blanco/facebook.png" /></a>
+          <a href="http://www.twitter.com/alejoerendon" target="_blank"><img src="img/icons/blanco/twitter.png" /></a>
+          <a href="http://www.instagram.com/alejandroerendon" target="_blank"><img src="img/icons/blanco/instagram.png" /></a>
+          <a href="http://www.github.com/aerendon" target="_blank"><img src="img/icons/blanco/github.png" /></a>
+        </div>
+        <div id="flecha">
+          <a href="#bio"><img src="img/icons/blanco/flecha.png" /></a>
+        </div>
       </div>
       <div class="content" id="bio">
         <h1>Bio</h1>
