--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <header>
-      <!-- <nav>
+      <nav>
         <ul>
-          <li><a href="#">Alejandro E. Rendon</a></li>
-          <li><a href="#">Bio</a></li>
-          <li><a href="#">Portafolio</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a href="#intro">Alejandro E. Rendon</a></li>
+          <li><a href="#bio">Bio</a></li>
+          <li><a href="#portafolio">Portafolio</a></li>
+          <li><a href="#contacto">Contacto</a></li>
         </ul>
-      </nav> -->
+      </nav>
     </header>
     <main>
       <div class="content" id="intro">
@@ -37,6 +37,7 @@
       </div>
       <div class="content" id="bio">
         <h1>Bio</h1>
+        <h2>Habilidades/Skills</h2>
       </div>
       <div class="content" id="portafolio">
         <h1>Portafolio</h1>
