--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </nav>
     </header>
     <main>
-      <div class="content" id="intro">
+      <div class="contenedor" id="intro">
         <img src="img/foto.png" alt="Foto de perfil" />
         <h1>Alejandro E. Rendon</h1>
         <h3>
@@ -35,19 +35,38 @@
           <a href="#bio"><img src="img/icons/blanco/flecha.png" /></a>
         </div>
       </div>
-      <div class="content" id="bio">
+      <div class="contenedor" id="bio">
         <h1>Bio</h1>
+        <div class="contenido">
+
+        </div>
         <h2>Habilidades/Skills</h2>
       </div>
-      <div class="content" id="portafolio">
+      <div class="contenedor" id="portafolio">
         <h1>Portafolio</h1>
       </div>
-      <div class="content" id="contacto">
+      <div class="contenedor" id="contacto">
         <h1>Contacto</h1>
+        <div class="contenido">
+          <div>
+            <a href="http://www.facebook.com/alejoerendon" target="_blank"><img src="img/icons/blanco/facebook.png" /></a>
+            <a href="http://www.twitter.com/alejoerendon" target="_blank"><img src="img/icons/blanco/twitter.png" /></a>
+            <a href="http://www.instagram.com/alejandroerendon" target="_blank"><img src="img/icons/blanco/instagram.png" /></a>
+            <a href="http://www.github.com/aerendon" target="_blank"><img src="img/icons/blanco/github.png" /></a>
+          </div>
+          <div>
+            <input placeholder="Nombre" name="name" required="" type="text">
+            <input placeholder="Correo" name="correo" required="" type="email">
+            <textarea name="name" placeholder="Mensaje" rows="3" required=""></textarea>
+          </div>
+          <div>
+            <button type="button" name="button">Enviar</button>
+          </div>
+        </div>
       </div>
     </main>
     <footer>
-      
+
     </footer>
   </body>
 </html>
