--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
           <div>
             <button type="button" name="button">Enviar</button>
           </div>
+          <h3>Más Información</h3>
+          <ul>
+            <li>Grupo de Investigación Sirius - Oficina R-003</li>
+            <li>Universidad Tecnológica de Pereira</li>
+            <li>Tel: 3000000</li>
+          </ul>
         </div>
       </div>
     </main>
