--- a/index.html
+++ b/index.html
@@ -38,12 +38,34 @@
       <div class="contenedor" id="bio">
         <h1>Bio</h1>
         <div class="contenido">
-
+          <p>
+            Soy <b>Alejandro E. Rendon</b>, estudiante de Ingeniería de Sistemas y Computación de la <a href="http://utp.edu.co">Universidad Tecnológica de Pereira</a>.
+          </p>
+          <p>
+            Actualmente trabajo haciendo daños para el <a href="http://sirius.utp.edu.co">Grupo de Investigación Sirius</a> en la rama de Computación de alto Desempeño.
+          </p>
         </div>
         <h2>Habilidades/Skills</h2>
+        <div class="contenido">
+
+        </div>
       </div>
       <div class="contenedor" id="portafolio">
         <h1>Portafolio</h1>
+        <div class="contenido">
+          <div class="portafolio">
+            <img src="img/jointdeveloper.png" />
+            Comunidad jointDeveloper
+          </div>
+          <div class="portafolio">
+            <img src="img/in-silico.png" />
+            Semillero In-silico UTP
+          </div>
+          <div class="portafolio">
+            <img src="img/sirius.png" />
+            Grupo de Investigación Sirius
+          </div>
+        </div>
       </div>
       <div class="contenedor" id="contacto">
         <h1>Contacto</h1>
@@ -75,4 +97,6 @@
 
     </footer>
   </body>
+  <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script type="text/javascript" src="js/scroll.js"></script>
 </html>
