--- a/index.html
+++ b/index.html
@@ -47,23 +47,53 @@
         </div>
         <h2>Habilidades/Skills</h2>
         <div class="contenido">
-
+          <div class="lista">
+            <h3>Lenguajes de Programación</h3>
+              <img src="img/icons/c.png" />
+              <img src="img/icons/python.png" />
+              <img src="img/icons/php.png" />
+              <img src="img/icons/js.png" />
+          </div>
+          <div class="lista">
+            <h3>Desarrollo Web</h3>
+            <img src="img/icons/css.png" />
+            <img src="img/icons/html.png" />
+          </div>
+          <div class="lista">
+            <h3>Otros</h3>
+            <img src="img/icons/ps.png" />
+            <img src="img/icons/robot.png" />
+            <img src="img/icons/database.png" />
+            <img src="img/icons/js.png" />
+          </div>
         </div>
       </div>
       <div class="contenedor" id="portafolio">
         <h1>Portafolio</h1>
         <div class="contenido">
           <div class="portafolio">
-            <img src="img/jointdeveloper.png" />
-            Comunidad jointDeveloper
+            <div>
+              <img src="img/jointdeveloper.png" />
+            </div>
+            <div>
+              Comunidad jointDeveloper
+            </div>
           </div>
           <div class="portafolio">
-            <img src="img/in-silico.png" />
-            Semillero In-silico UTP
+            <div>
+              <img src="img/in-silico.png" />
+            </div>
+            <div>
+              Semillero In-silico UTP
+            </div>
           </div>
           <div class="portafolio">
-            <img src="img/sirius.png" />
-            Grupo de Investigación Sirius
+            <div>
+              <img src="img/sirius.png" />
+            </div>
+            <div>
+              Grupo de Investigación Sirius
+            </div>
           </div>
         </div>
       </div>
