--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
           <a href="http://www.instagram.com/alejandroerendon" target="_blank"><img src="img/icons/blanco/instagram.png" /></a>
           <a href="http://www.github.com/aerendon" target="_blank"><img src="img/icons/blanco/github.png" /></a>
         </div>
+        <div id="cv">
+          <a href="docs/CV.pdf" target="_blank"><button type="button" name="button">CV</button></a>
+        </div>
         <div id="flecha">
           <a href="#bio"><img src="img/icons/blanco/flecha.png" /></a>
         </div>
