--- a/index.html
+++ b/index.html
@@ -130,6 +130,6 @@
 
     </footer>
   </body>
-  <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script type="text/javascript" src="js/scroll.js"></script>
 </html>
